--- a/PruebaGrupo2.Rmd
+++ b/PruebaGrupo2.Rmd
@@ -6,10 +6,6 @@ output: html_document
 ---
 
 Esto es un Rmarkdown de prueba 
-<<<<<<< HEAD
-Escribimos algo...........
-DGHJDHJDGHJ
-=======
 
-Actualización de prueba
->>>>>>> 885b88778d5b11cf14b436e3c1eec5cccac1478d
+Nueva prueba de funcionamiento push
+
