--- a/Problemas_Individuales.Rmd
+++ b/Problemas_Individuales.Rmd
@@ -82,3 +82,84 @@ resSergio = criterio.Todos(tbSergio,0.5,T)
 knitr::kable(resSergio)
 ```
 Salvo por el criterio optimista que la mejor opción es la decisión “d2 = Lo representa el hermano”, la mejor decisión es la “d1 = trabaja con un representante profesional y con experiencia”. Mientras que la otra decisión planteada "d3 = no tiene representante" no es seleccionada por ninguno de los criterios. En definitiva, Pepe se decantará por un representate profesional.
+
+
+# Enunciado Amparo Jiménez Jurado
+
+Irene y Juan están pensando en revelar las fotos de sus niños de cuando eran pequeños. Están mirando varias páginas web para que le lleguen las fotos a su domicilio y tienen las siguientes opciones:
+
+-La primera opción sería la App de Cheers. Que tienen gastos de envío con un coste de 1,5 euros. No obstante, pueden conseguir códigos de descuento al hacer pedidos con un gasto mayor o igual a 15 euros y así poder obtener envío gratis. El coste total del álbum seria de 15 euros en el se incluye un total de 20 fotos tamaño 5cm*3cm. 
+
+-La segunda opción sería la App de Photossi. Esta App ha diferencia de la anterior no tiene gastos de envío, pero como requisito el coste de la compra mínima debe ser de 18 euros. Podrían además optar a conseguir un código de descuento de dos euros que se le aplicaría al total de la compra.
+
+-Como última opción tenemos la App SayCheese. Esta aplicación se caracteriza porque es necesario estar suscrito a su página web, es decir, registrarse por primera vez para así obtener el envío gratis. Tendrían que pagar sólo el coste del álbum que sería 14,25 donde estaría incluido un total de 18 fotos tamaño 5cm* 3cm.
+
+¿ A través de que App deberían decantarse Irene y Juan para revelar las fotos?
+
+###SOLUCIÓN###
+-   Planteamiento:
+
+    -   Un decisor (dos personas que actúan como un único decisor).
+
+    -   Modelo de costos (desfavorable: quieren gastar el menor dinero posible).
+
+    -   Alternativas:
+
+        -   d1 = "Cheers"
+
+        -   d2 = "Photossi"
+
+        -   d3 = "SayCheese"
+
+    -   Estados de la naturaleza:
+
+        -   e1 = "No consiguen descuento"
+
+        -   e2 = "Consiguen descuento"
+
+    -   Valoraciones (costos de los dos):
+
+        -   Estado e1 :
+
+            -   $x_{1,1}=$ `r 1.5 + 15.00`
+
+            -   $x_{2,1}=$ `r 18.00`
+
+            -   $x_{3,1}=$ `r 14.25`
+
+        -   Estado e2 :
+
+            -   $x_{1,2}=$ `r 1.5*15.00`
+
+            -   $x_{2,2}=$ `r 18.00 - 2`
+
+            -   $x_{3,2}=$ `r 14.25
+-   Introducción de datos:
+```{r}
+datos1 = crea.tablaX(c(14.245, 17.845, 
+                       12.5, 18.5,
+                       20.35, 20.35), numalternativas = 3, numestados = 2)
+
+colnames(datos1)=c('e1','e2')
+rownames(datos1)=c('Cheers','Photossi','SayCheese')
+
+kable(datos1,longtable=T,booktabs=T)%>%
+kable_styling(latex_options = c("striped","HOLD_position"))
+
+```
+-   Resolución:
+```{r}
+sol1 = criterio.Todos(datos1, alfa=0.3, favorable=FALSE)
+
+kable(sol1,longtable=T,booktabs=T)%>%
+kable_styling(latex_options = c("striped","HOLD_position"))
+```
+De los 6 criterios que obtenemos, en 5 de ellos se nos recomienda la segunda  opción, ***APPSayCheese***. Excepto por el método Wald que recomienda***APPCheers***.
+
+
+A continuación, representamos el gráfico del criterio de Hurwicz:
+
+```{r,fig.width=10, fig.height=4, fig.align="center"}
+dibuja.criterio.Hurwicz(datos1, favorable=FALSE)
+```
+
