He implementado el nombre de los estados de la naturaleza y las distintas alternativas como las variables de 60/40 que tienen en la primera opción con DOGE y MATIC (ya que BTC va a ser siempre 1000) y 40/60 DOGE y MATIC.

--- a/Problemas_Individuales.Rmd
+++ b/Problemas_Individuales.Rmd
@@ -276,6 +276,9 @@ dibuja.criterio.Hurwicz(tabla_Enrique, favorable = T)
 tablaAlex=crea.tablaX(c(172,-168,
                    158,-142,
                    100,-100),3,2)
+
+colnames(tablaAlex)=c("subida","bajada")
+rownames(tablaAlex)=c("60/40","40/60","100")
 resAlex=criterio.Todos(tablaAlex,0.5,T)
 kable(tablaAlex)
 tablaAlex
