--- a/Problemas_Individuales.Rmd
+++ b/Problemas_Individuales.Rmd
@@ -233,7 +233,15 @@ dibuja.criterio.Hurwicz(tabla_Enrique, favorable = T)
 
 # Enunciado Alejandro Gallego López
 
-  Santiago va a empezar a invertir en criptomonedas. Dispone de un capital de 2000€ los cuales va a diversificar entre monedas más volátiles y menos. Sabe que el 50% va a ir destinado seguro a BTC. El resto, va a dividirlo entre 2 monedas diferentes. La primera es DOGE, que es la más volátil y la segunda es MATIC, que es más volátil que BTC pero menos que DOGE. Santiago no sabe si invertir un 60% en DOGE y 40% en MATIC o un 40% DOGE, 60% MATIC. Por última opción, como la más conservadora, sería invertir el 100% en BTC. Si el mercado sube, BTC subirá un 5%, DOGE un 15% y MATIC un 8%. Si el mercado baja, BTC bajará un 5%, DOGE un 17% y MATIC un 4%.
+  Santiago va a empezar a invertir en criptomonedas.
+  Dispone de un capital de 2000€ los cuales va a diversificar entre monedas más volátiles y menos.
+  Sabe que el 50% va a ir destinado seguro a BTC.
+  El resto, va a dividirlo entre 2 monedas diferentes. La primera es DOGE, que es la más volátil y la segunda es MATIC, que es más volátil que BTC pero menos que DOGE.
+  Santiago no sabe si invertir un 60% en DOGE y 40% en MATIC 
+  o un 40% DOGE, 60% MATIC.
+  Por última opción, como la más conservadora, sería invertir el 100% en BTC.
+  Si el mercado sube, BTC subirá un 5%, DOGE un 15% y MATIC un 8%.
+  Si el mercado baja, BTC bajará un 5%, DOGE un 17% y MATIC un 4%.
   
 ### SOLUCIÓN
 
