--- a/Problemas_Individuales.Rmd
+++ b/Problemas_Individuales.Rmd
@@ -49,9 +49,9 @@ Pepe es un jugador de fútbol profesional, el cual actualmente se encuentra sin 
 
         -   Estado e1:
 
-            -   $m_{1,1}=$ `r (0.8*500000)+(0.9*100000)`
-            -   $m_{2,1}=$ `r (0.9*500000)+(0.9*100000)`
-            -   $m_{3,1}=$ `r 500000+65000`
+            -   $m_{1,1}=$ `r (0.8*500000)+(0.9*200000)`
+            -   $m_{2,1}=$ `r (0.9*500000)+(0.9*150000)`
+            -   $m_{3,1}=$ `r 500000+75000`
 
         -   Estado e2:
 
@@ -312,4 +312,85 @@ resAlex
 ```{r}
 dibuja.criterio.Hurwicz(tablaAlex, favorable = T)
 ```
-    
+
+
+# Enunciado Concepción Fernández Gayango
+
+Sara ha conseguido un gran número de seguidores en Tiktok en el último año y una importante empresa ha contactado con ella para hacer una campaña de publicidad. Como es su primer proyecto, ha barajado varias opciones:
+
+- Realizar la campaña con Nickname, una experimentada agencia de medios sociales que cuenta con managers, publicistas, productores, etc. Nickname ha negociado con la empresa y ofrece a Sara lo siguiente: un pago fijo de 5000 euros (la agencia se queda un 20%), si los vídeos publicitarios superan un número determinado de visitas, Sara obtendrá un plus de 2000 euros, de los cuales a la agencia le corresponde un 7%. En cambio, si no consigue las visitas, al pago fijo se le añaden 200 euros (un 2% destinados a Nickname).  
+
+- Ser asesorada por Juan, un manager que ha conseguido para Sara las siguientes condiciones: un pago fijo de 4000 euros y un plus de 2000 euros por conseguir el determinado número de visitas (15% para Juan). Si no consigue las visitas obtendrá 1000 euros y Juan no recibe comisión. 
+
+-  Negociar ella misma con la empresa, consiguiendo un pago fijo de 3500 euros. Al finalizar la campaña se examinan el alcance de los videos, si obtienen las visitas acordadas cobrará 3000 euros más, en caso contrario, solo obtendrá el pago fijo.
+
+¿Cuál sería la mejor opción para Sara?
+
+### Solución
+
+-   Planteamiento:
+
+    -   Un decisor
+
+    -   Modelo de beneficios (favorable: Sara quiere ganar el máximo dinero posible)
+
+    -   Alternativas:
+
+        -   d1= "Agencia Nickname"
+        -   d2= "Juan Representante"
+        -   d3= "Afronta la campaña sola"
+
+    -   Estados de la naturaleza:
+
+        -   e1= "Los videos alcanzan las visitas acordadas"
+        -   e2= "Los videos no alcanzan las visitas acordadas"
+
+    -   Valoraciones (costos de los dos)
+
+        -   Estado e1:
+
+            -   $m_{1,1}=$ `r (0.8*5000)+(0.93*2000)`
+            -   $m_{2,1}=$ `r (0.85*4000)+(0.85*2000)`
+            -   $m_{3,1}=$ `r 3500+3000`
+
+        -   Estado e2:
+
+            -   $m_{1,2}=$ `r (0.8*5000)+(0.98*200)`
+            -   $m_{2,2}=$ `r (0.85*4000)+1000`
+            -   $m_{3,2}=$ `r 3500`
+
+-   Introducimos los datos:
+
+```{r}
+#e1:
+m11=(0.8*5000)+(0.93*2000)
+m21= (0.85*4000)+(0.85*2000)
+m31= 3500+3000
+#e2:
+m12=(0.8*5000)+(0.98*200)
+m22=(0.85*4000)+1000
+m32=3500
+```
+
+-   La solución sería:
+
+```{r}
+tabla_Conchi = crea.tablaX(c(m11,m12,
+                             m21,m22,
+                             m31,m32),3,2)
+kable(tabla_Conchi)
+
+res_Conchi = criterio.Todos(tabla_Conchi,0.5,T)
+res_Conchi
+```
+
+Los resultados obtenidos son los siguientes:
+- Según el criterio de Wald la mejor opción sería que Sara fuera representada por Juan.
+- El criterio optimista ha determinado que lo mejor para Sara es afrontar la campaña sola.
+- Por último, los criterios de Hurwicz, Laplace y Punto Ideal establecen que la mejor alternativa es pertenecer a la agencia Nickname.
+
+Representamos ahora graficamente el criterio de Hurwicz
+
+```{r}
+dibuja.criterio.Hurwicz(tabla_Conchi, favorable = T)
+```
